# WC_IST

./: .cproject  .editorconfig  .gitignore  .mxproject  .project  AGENTS.md  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  STM32G474QETX_FLASH.ld  STM32G474QETX_RAM.ld  uspf_421243_064.ioc  uspf_421243_064.txt
.codex/skills/: README.md
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h
Core/Src/: freertos_support.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Fw/: README.md
Fw/bsp/: qspi_port.h
Fw/common/: README.md
Fw/control/: CMakeLists.txt  README.md  control_core.c  control_core.h
Fw/drivers/: psram_aps6404l.c  psram_aps6404l.h
Fw/logging/: CMakeLists.txt  README.md  logging_capture_sram.c  logging_capture_sram.h  logging_core.c  logging_core.h  logging_crc32.c  logging_crc32.h  logging_packer.c  logging_packer.h  logging_pipeline.h  logging_platform.h  logging_platform_stm32g4.h  logging_record.c  logging_record.h  logging_spsc.c  logging_spsc.h  logging_tx_scheduler.c  logging_tx_scheduler.h  logging_types.h
Fw/measurement/: README.md
Fw/port/: README.md
Fw/protocol/: README.md  service_tx_scheduler.h
Fw/safety/: README.md
Fw/state_machine/: README.md
ci/: Jenkinsfile.host-sil  README.md
ci/jenkins/: README.md  pipeline.groovy
cmake/: README.md
docs/: ARCHITECTURE.md  CODING_STANDARD_RU.md  CONTEXT_SNAPSHOT.md  DOCS_INDEX.md  ENGINEERING_CONTRACT.md  GLOSSARY.md  HOW_TO_USE_RU.md  LOGGING_CAPTURE_GUIDE_RU.md  MISSING_SPECS_IMPLEMENTATION_RU.md  PROJECT_CONTEXT.md  PROMPT_TEMPLATES.md  PROTOCOL_TK.md  README.md  SAFETY.md  TEST_PLAN.md
docs/datasheets/: README.md
docs/decisions/: ADR-001_Fault_Chains_and_Pins.md  ADR-002_MCU_Selection_G474_vs_H723.md  ADR-003_TK_EtherCAT_PDO_Emu_Over_UDP_Batching.md  ADR-004_TK_Interface_EtherCAT_COMX_FMC_and_UART_PDO_Emu.md  ADR-005_Observability_Trace_Scope_and_Service_Enable.md  ADR-006_AD7380_TIM3_DMA_Sampling.md  ADR-007_Logging_PSRAM_UART_Window.md  ADR-008_UART_Service_Interface_Runtime_Model.md  ADR-009_Vdc_feed_forward_TK_vs_control_core.md  ADR-20260209-fault-chains-and-pins.md  ADR-20260209-mcu-selection-g474-vs-h723.md  ADR-20260209-tk-ethercat-pdo-emu-over-udp-batching.md  ADR-20260210-tk-interface-ethercat-comx-fmc-and-uart-pdo-emu.md  ADR-20260211-observability-trace-scope-and-service-enable.md  ADR-20260213-ad7380-tim3-dma-sampling.md  ADR-20260213-logging-psram-uart-window.md  ADR-TEMPLATE.md  README.md
docs/design-notes/: DN-001_MFDC_Current_Control.md  DN-002_MFDC_ManualDuty_Service_Mode.md  DN-003_MFDC_Iweld_Profile_Calibration.md  DN-004_MFDC_Control_Core.md  DN-005_QSPI_PSRAM_Oscilloscope_Buffer.md  DN-006_PCCOM4_Protocol_Stack.md  DN-007_TK_EtherCAT_COMX_FMC_Integration.md  DN-008_AD7380_Sampling_and_Timing_Sync.md  DN-009_Observability_Trace_Scope_Service_Enable.md  DN-010_QSPI_Driver_APS6404L.md  DN-011_Service_Logging_Capture_Framework.md  DN-012_PCCOM4_Emu_Logging_Capture.md  DN-013_UART_Service_Runtime_Gating_and_Proof.md  DN-014_PSRAM_Logging_Backend_Plan.md  DN-015_HSI_Pinmux_Map.md  DN-016_C1_Controlled_Ramp_Down.md  DN-017_CCMRAM_FastLoop_Placement.md  DN-018_SRAM1_SRAM2_DMA_Buffer_Placement.md  DN-019_Actuator_Safety_DutyCap_NoCurrent.md  DN-020_Vdc_Compensation.md  DN-021_pccom4_dma_zero_copy_rx.md  DN-TEMPLATE.md  README.md
docs/hsi/: HSI_DMA_MAP.md  HSI_IO_MAP.md  HSI_SAFETY_PINS.md  HSI_TRIGGER_MAP.md  README.md  WORKFLOW.md
docs/logging/: LOGGING_GUIDE.md
docs/measurements/: MEASUREMENT_ARCHITECTURE_RU.md
docs/meta/: LLM_SKILLS_GUIDE_RU.md
docs/protocols/: CAN_LOGGING_HOWTO_RU.md  PCCOM4.02.md  PCCOM4.02_PROJECT.md  PROTOCOL_TK.md  PROTOCOL_TK_ETHERCAT.md  readme.md  tk_protocol.dbc
docs/reviews/: MFDC_Red_Team_Design_Review.md  RED_TEAM_REVIEW_TIMING_EPOCH_GUARD.md
docs/safety/: DAP_MFDC_ru.md  Design_Assurance_Package_MFDC.md  FMEA-001_MFDC_Source.md  SAFETY_CONCEPT_CBM706T_RU.md  SFAT_and_Timing_Budget_MFDC_ru.md  Unified_Safety_by_Design_MFDC.md
skills/: README.md  ask-questions-embedded-stm32-freertos.md  red-team-review-welding.md  safety-invariants-welding.md  strict-audit.md  workflow-spec-tests-code.md
tests/: CMakeLists.txt  README.md
tests/unit/: CMakeLists.txt  README.md  control_core_tests.c  logging_framework_tests.c  psram_aps6404l_tests.c
tools/: README.md  fix_eol_crlf.bat  fix_eol_crlf.ps1
(+40 files in other folders)
